# cwrdd

./: .gitignore  COMPOSE.md  README.md  compose.yaml
app/: Cargo.toml  Dockerfile
app/src/: main.rs
app/templates/: index.html
config/alloy/: config.alloy
config/grafana/provisioning/dashboards/: dashboards.yaml
config/grafana/provisioning/datasources/: datasources.yaml
config/loki/: loki.yaml
config/prometheus/: prometheus.yml
config/tempo/: tempo.yaml
db/: README.md  liquibase.properties
db/migrations/: README.md  changelog.xml
db/schema/: README.md  users.sql
db/scripts/: queries.sql  seed-dev-data.sql
docs/adr/: 001-modular-monolith-architecture.md  002-server-side-rendering-htmx.md  003-opentelemetry-observability.md  004-cargo-nextest-testing.md  005-ubuntu-linux-only.md
docs/features/: README.md
docs/features/authentication/: authentication-and-authorization.md  rate-limiting.md
docs/features/events/: event-creation.md
docs/features/organizations/: channels-and-forums.md  organizations.md
docs/features/pricing/: subscription-model.md
docs/features/trust-and-safety/: README.md  age-verification.md  illegal-content-detection.md  jurisdictional-compliance.md  spam-detection-and-prevention.md
docs/features/users/: profiles.md
make/: Cargo.toml  README.md
make/src/: config.rs  lib.rs  main.rs  task.rs
make/src/tasks/: build.rs  certs.rs  compose.rs  doc.rs  get_tools.rs  install.rs  migrate.rs  mod.rs  test.rs
make/tests/: integration_tests.rs
scripts/: README.md  setup-ubuntu.sh
