[package]
name = "cwrdd-make"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cwrdd-make"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.41", features = ["full"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.13"
